--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,9 +2,17 @@
     padding: 0 2rem;
 }
 
+.header {
+    padding: 4rem 0 0 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .main {
-    min-height: 100vh;
-    padding: 4rem 0;
+    padding: 0;
     flex: 1;
     display: flex;
     flex-direction: column;
